// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Porduct Title debe de incrementar el contador 1`] = `
<div
  className="productCard "
>
  <h1>
     Product Card 
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +1
  </button>
</div>
`;

exports[`Porduct Title debe de mostrar el componente correctamente 1`] = `
<div
  className="productCard "
>
  <h1>
     Product Card 
  </h1>
</div>
`;
